# message-queue-system

./: CMakeLists.txt  Makefile  README.txt
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/implementation/: Message.cpp  MessageQueue.cpp  QueueManager.cpp
src/core/include/: Message.h  MessageQueue.h  QueueManager.h
